<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Registrar">

    <LinearLayout
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingresar"
            android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/titulo"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/formulario"
            android:layout_marginRight="15sp"/>

        <Spinner
            android:id="@+id/spinnerFormulario"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:padding="10sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/casillas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/form"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/casillas"
            android:layout_marginRight="25sp"/>
        <Spinner
            android:id="@+id/spinnerCasilla"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:padding="10sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/parametro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_below="@id/casillas">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parametro"
            android:layout_marginRight="15sp"/>
        <EditText
            android:id="@+id/txtParam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
             />
        <!--<Spinner
            android:id="@+id/spinnerParametro"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:padding="10sp"/>-->
    </LinearLayout>
    <LinearLayout
        android:id="@+id/unidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/parametro"
        android:padding="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unidadMedida"/>
        <EditText
            android:id="@+id/txtUnidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            />
        <!--<Spinner
            android:id="@+id/spinnerUnidad"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:padding="10sp"/>-->
    </LinearLayout>
    <LinearLayout
        android:id="@+id/valor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/unidad"
        android:padding="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valor"
            android:layout_marginRight="15sp"/>
        <EditText
            android:id="@+id/txtValor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/localidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/valor"
        android:padding="10dp"
        android:orientation="horizontal">
        <!--<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/localidad"
            android:layout_marginRight="15sp"/>
        <Spinner
            android:id="@+id/spinnerLocalidad"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:padding="10sp"/>-->
    </LinearLayout>
    <LinearLayout
        android:id="@+id/botones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_below="@id/localidad"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/btnCancelar"
            android:padding="10dp"
            android:layout_marginRight="10dp" />
        <Button
            android:id="@+id/btnAceptar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/btnAceptar"
            android:padding="10dp"

            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/botones"
        android:orientation="vertical"
        android:padding="10dp" >
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="bottom"
            app:srcCompat="@drawable/vientologo" />
    </LinearLayout>

</RelativeLayout>