<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <LinearLayout
        android:id="@+id/primeraparte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="150dp">
            
            <ImageView
                android:id="@+id/logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:src="@drawable/vientologo">

            </ImageView>


        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp"
                android:text="@string/tituloInicio">

            </TextView>
        </FrameLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/segundaparte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/primeraparte"
        android:orientation="vertical"
        android:padding="5dp"
        android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/segundaparte">

        <Button
            android:id="@+id/btnIngresar"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:text="@string/btnIngresar"/>

        <TextView
            android:id="@+id/olvido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contactenos"
            android:padding="5dp"
            android:textAlignment="center"/>
        <!--<TextView
            android:id="@+id/ayuda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ayuda"
            android:textAlignment="center"/>
        <TextView
            android:id="@+id/cuenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cuenta"
            android:textAlignment="center"
            android:padding="10dp"/>-->
        <TextView
            android:id="@+id/contacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contacto"
            android:textAlignment="center"/>
    </LinearLayout>
    </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>