<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10sp"
    android:orientation="vertical"
    tools:context=".Usuario">

    <!--<androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtDatos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>-->

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--<ImageView
            android:id="@+id/imgUser"
            android:layout_width="135sp"
            android:layout_height="135sp"
            android:contentDescription="user"
            android:padding="5sp"
            android:visibility="visible"
            tools:srcCompat="@drawable/baseline_person_black_18dp"
            tools:visibility="visible" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/tituloUser"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombreUser" />

            <TextView
                android:id="@+id/txtUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorButtonNormal"
                android:duplicateParentState="false"
                 />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre" />

            <TextView
                android:id="@+id/txtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorButtonNormal"
                />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/apellido" />

            <TextView
                android:id="@+id/txtApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorButtonNormal"/>


        </LinearLayout>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10sp">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="135sp"
            android:layout_height="wrap_content"
            android:padding="5sp"
            android:text="@string/tipoUser" />

        <TextView
            android:id="@+id/txtTipoUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorButtonNormal"
            android:padding="5sp" />

    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="135sp"
            android:layout_height="wrap_content"
            android:padding="5sp"
            android:text="@string/estado" />

        <TextView
            android:id="@+id/txtEstado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorButtonNormal"
            android:padding="5sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="135sp"
            android:layout_height="wrap_content"
            android:padding="5sp"
            android:text="@string/tipoDoc" />

        <TextView
            android:id="@+id/txtTipoDoc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorButtonNormal"
            android:padding="5sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="135sp"
            android:layout_height="wrap_content"
            android:padding="5sp"
            android:text="@string/numDoc" />

        <TextView
            android:id="@+id/txtNroDoc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorButtonNormal"
            android:padding="5sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="135sp"
            android:layout_height="wrap_content"
            android:padding="5sp"
            android:text="@string/direccion" />

        <TextView
            android:id="@+id/txtDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorButtonNormal"
            android:padding="5sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView21"
            android:layout_width="135sp"
            android:layout_height="wrap_content"
            android:padding="5sp"
            android:text="@string/correo" />

        <TextView
            android:id="@+id/txtCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorButtonNormal"
            android:padding="5sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:padding="10sp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="bottom"
            app:srcCompat="@drawable/vientologo" />

        <!--<TextView
            android:id="@+id/txtContacto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center|center_vertical"
            android:padding="20sp"
            android:text="@string/contacto"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />-->
    </TableRow>

    <!--<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="10sp">

            &lt;!&ndash;<ImageView
                android:id="@+id/imageView2"
                android:layout_width="76dp"
                android:layout_height="77dp"
                app:srcCompat="@mipmap/ic_logo" />&ndash;&gt;

            &lt;!&ndash;<TextView
                android:id="@+id/txtContacto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center|center_vertical"
                android:padding="20sp"
                android:text="@string/contacto"
                android:textColor="#FFFFFF"
                android:textSize="12sp" />&ndash;&gt;
        </TableRow>
    </RelativeLayout>-->

</LinearLayout>